[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/PauseMenu/PauseMenus.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/Theme/Theme_SuccessButton.tres" type="Theme" id=3]
[ext_resource path="res://GUI/PauseMenu/ResumeIcon.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Hide"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_all_button_enable"
}, {
"args": [ false ],
"method": "set_process"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_y_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0, 240.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_all_button_enable"
}, {
"args": [ true ],
"method": "set_all_button_enable"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_process"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_y_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 240.0, 0 ]
}

[node name="PauseMenuContainer" type="ReferenceRect"]
margin_right = 192.0
margin_bottom = 256.0
mouse_filter = 2
border_color = Color( 0.831373, 1, 0, 1 )
script = ExtResource( 1 )
rect_y_offset = 240.0

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = 0.000366211

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 192.0
margin_bottom = 219.0
rect_min_size = Vector2( 0, 200 )
custom_constants/separation = 12
alignment = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 192.0
margin_bottom = 200.0
rect_clip_content = true
focus_mode = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Resume"
icon = ExtResource( 4 )
clip_text = true

[node name="ShowHidePlayer" type="AnimationPlayer" parent="."]
anims/Hide = SubResource( 1 )
anims/Show = SubResource( 2 )
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="animation_finished" from="ShowHidePlayer" to="." method="_on_ShowHidePlayer_animation_finished"]
